Fixing another alignment error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -217,6 +217,7 @@ footer{
     font-family: "Montserrat-black", sans-serif;
 }
 .register-form-container{
+    margin: auto;
     width: 80%;
     background-color: white;
     padding: 60px 60px;
